# deltasort

./: .gitignore  .prettierrc  LICENSE  README.md  REAL_WORLD_ANALYSIS.md  RELEASE_NOTES.md  TAG_CREATION_STATUS.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  publish-js.yml  publish-rust.yml
js/: benchmark.html  leaderboard.html  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
js/src/: Benchmark.ts  BenchmarkData.ts  DeltaSort.benchmark.test.ts  DeltaSort.test.ts  DeltaSort.ts  benchmark.ts  index.ts
paper/: .gitignore  Makefile  article.tex  main.aux  main.out  main.tex  refs.bib  sea.tex
paper/figures/: L-fix-invariant.tex  R-fix-invariant.tex  algorithm-comparison.tex  algorithm-detailed.tex  algorithm.tex  all-algorithms.tex  cancellation.tex  comparator-analysis.csv  comparator-count.tex  complexity-analysis.tex  crossover-ratio.tex  crossover.tex  delta-sort-example.tex  execution-time-table.tex  incremental-sorting-algorithms.tex  movement-analysis.csv  pseudocode.tex  segments.tex  (+6 more)
rust/: .gitignore  Cargo.toml  README.md  cdc_benchmark.csv  crossover_benchmark.csv  particle_cheap.csv  particle_expensive.csv  plot_scaling.py
rust/.cargo/: config.toml
rust/benches/: benchmarks.rs
rust/benchmark/: applications_benchmark.rs  binary_insertion_sort.rs  crossover.rs  data.rs  esm_variants.rs  extract_sort_merge.rs  instrumented_deltasort.rs  main.rs  parallel_benchmark.rs  parallel_bevy_bench.rs  statistics.rs
rust/src/: lib.rs  parallel.rs
rust/tests/: correctness.rs
src/: DeltaSort.benchmark.test.ts  DeltaSort.test.ts  DeltaSort.ts  index.ts
(+45 files in other folders)
