[package]
name = "deltasort"
version = "0.1.0"
edition = "2021"
authors = ["Shubham Dwivedi <shubd3@gmail.com>"]
description = "Incremental sorting of arrays with known updates"
license = "MIT"
repository = "https://github.com/shubd3/deltasort"
keywords = ["delta", "sort", "incremental", "fast"]
categories = ["algorithms"]

[lib]
name = "deltasort"
path = "src/lib.rs"

[dependencies]
rand = "0.8"

[dev-dependencies]

[[bin]]
name = "benchmark"
path = "benchmark/main.rs"
